# ical-to-masto

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE.md  README.md
src/: config.rs  ical.rs  main.rs
