[package]
name = "ical-to-masto"
version = "0.1.0"
edition = "2024"
authors = [ "Andrew Newton"]

[lib]
name = "ical_to_masto"
path = "src/lib.rs"

[[bin]]
name = "ical-to-masto"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
mastodon-async = "1.3.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
dirs = "5.0.1"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
ical = "0.11.0"
anyhow = "1.0.100"

[dev-dependencies]
indoc = "1.0"
